@@ -55,6 +55,7 @@ easier to use. The changes are:
 - Ut Video decoder
 - Speex encoding via libspeex
 - 4:2:2 H.264 decoding support
+- Pulseaudio input device
 
 
 version 0.7:
